<resources>
    <string name="app_name">FireNotes</string>
    <string name="notes">Notes</string>
    <string name="general">General</string>
    <string name="add_new">Add New</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="support">Support</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <string name="title_activity_add_note">AddNote</string>

    <string name="title_activity_edit_note">EditNote</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
